# c8tsender

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  c8tfile.py  cast_channel.pb.cc  cast_channel.pb.h  cast_channel.proto  chromecast.cpp  chromecast.hpp  index.html  main.cpp  playlist.cpp  playlist.hpp  webserver.cpp  webserver.hpp
htdocs/: index.html  index2.html
