cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated-declarations")
LINK_DIRECTORIES(/usr/local/lib)
PROJECT(c8tsender)
ADD_EXECUTABLE(c8tsender main.cpp chromecast.cpp playlist.cpp webserver.cpp jsoncpp/dist/jsoncpp.cpp cast_channel.pb.cc)
TARGET_LINK_LIBRARIES(c8tsender protobuf microhttpd ssl)
INCLUDE_DIRECTORIES(/usr/local/include jsoncpp/dist)
